installer/kserve/kustomize/overlay/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kserve-models-web-app
  namespace: kserve
spec:
  http:
    - match:
        - headers:
            ":authority":
              regex: kserve.*
      route:
        - destination:
            host: kserve-models-web-app.kserve.svc.cluster.local
            port:
              number: 80
